openshift/tekton_ws_part2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app
  labels:
    app: python-web-app
spec:
  selector:
    app: python-web-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
