openshift/tekton_ws_part2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-web-app
  labels:
    app: python-web-app
spec:
  to:
    kind: Service
    name: python-web-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
